Added github repo to the web page

--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
 
     <h2>Open Network Install Environment</h2>
 
-    ONIE is a small operating system, pre-installed as firmware on bare
-    metal network switchs, that provides an environment for automated
-    provisioning.
+    <p>
+      ONIE is a small operating system, pre-installed as firmware on bare
+      metal network switchs, that provides an environment for automated
+      provisioning.
 
     <h2>Documentation</h2>
 
@@ -26,6 +27,12 @@
     <p>
       Subscribe to the list or browse the
       archives <a href="https://groups.google.com/a/onie.org/group/onie">here</a>.
+
+    <h2>Download the Code</h2>
+    
+    <p>
+      The ONIE git repository is hosted
+      on <a href="https://github.com/onie/onie">GitHub</a>.
 
   </body>
 </html>
