Updated web page with new documentation

--- a/index.html
+++ b/index.html
@@ -34,5 +34,9 @@
       The ONIE git repository is hosted
       on <a href="https://github.com/onie/onie">GitHub</a>.
 
+    <p>
+      Current Release
+      Tag: <a href="https://github.com/onie/onie/tree/0.0.2-45ca8a7-PUB4">0.0.2-45ca8a7-PUB4</a>
+
   </body>
 </html>
