Updated web page documentation

--- a/index.html
+++ b/index.html
@@ -27,16 +27,18 @@
     <p>
       Subscribe to the list or browse the
       archives <a href="https://groups.google.com/a/onie.org/group/onie">here</a>.
+      This is a low volume list for questions, comments and general
+      announcements.
 
     <h2>Download the Code</h2>
     
     <p>
       The ONIE git repository is hosted
-      on <a href="https://github.com/onie/onie">GitHub</a>.
+      on GitHub: <a href="https://github.com/onie/onie">https://github.com/onie/onie</a>.
 
     <p>
       Current Release
-      Tag: <a href="https://github.com/onie/onie/tree/0.0.2-45ca8a7-PUB4">0.0.2-45ca8a7-PUB4</a>
+      Tag: <a href="https://github.com/onie/onie/tree/1.3.0">1.3.0</a>
 
   </body>
 </html>
