Add mailing list subscription email

--- a/index.html
+++ b/index.html
@@ -21,14 +21,20 @@
     <h2>Mailing List</h2>
 
     <p>
-      Join the conversation -- send questions, comments and ideas
+      This is a low volume list for questions, comments and general
+      announcements.
+
+    <p>
+      Send questions, bugs, comments and ideas
       to <a href="mailto:onie@onie.org">onie@onie.org</a>.
 
     <p>
-      Subscribe to the list or browse the
+      Subscribe to the list by sending an email
+      to <a href="mailto:onie+subscribe@onie.org">onie+subscribe@onie.org</a>.
+
+    <p>
+      Browse the
       archives <a href="https://groups.google.com/a/onie.org/group/onie">here</a>.
-      This is a low volume list for questions, comments and general
-      announcements.
 
     <h2>Download the Code</h2>
     
