URL encode the '+' in the email address

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     <p>
       Subscribe to the list by sending an email
-      to <a href="mailto:onie+subscribe@onie.org">onie+subscribe@onie.org</a>.
+      to <a href="mailto:onie%2Bsubscribe@onie.org">onie+subscribe@onie.org</a>.
 
     <p>
       Browse the
