Update web documentation
Include the new 'Project Overview' documentation on the web page.

--- a/index.html
+++ b/index.html
@@ -13,6 +13,13 @@
 
     <h2>Documentation</h2>
 
+    <p>
+    Please read the <a href="docs/overview/index.html">Project
+    Overview</a> for a quick summary of ONIE and how it works.
+
+    <p>
+    When you are ready to dive deeper read these pages:
+
     <ul>
       <li><a href="docs/design-spec/index.html">Design Overview</a></li>
       <li><a href="docs/developers/index.html">For Developers</a></li>
