Update github pages

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   </head>
   <body>
 
+    <img src="docs/_static/ONIE-logo-green-160x60.png" alt="ONIE">
     <h2>Open Network Install Environment</h2>
 
     <p>
@@ -51,7 +52,7 @@
 
     <p>
       Current Release
-      Tag: <a href="https://github.com/onie/onie/tree/1.4.0">1.4.0</a>
+      Tag: <a href="https://github.com/onie/onie/tree/1.5.0">1.5.0</a>
 
   </body>
 </html>
