Added quick start guide

--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
 
     <h2>Documentation</h2>
 
-    <p>
-    Please read the <a href="docs/overview/index.html">Project
-    Overview</a> for a quick summary of ONIE and how it works.
+    <ul>
+      <li><a href="docs/overview/index.html">Project Overview</a></li>
+      <li><a href="docs/user-guide/index.html">Quick Start User's Guide</a></li>
+    </ul>
 
     <p>
     When you are ready to dive deeper read these pages:
@@ -52,7 +53,7 @@
 
     <p>
       Current Release
-      Tag: <a href="https://github.com/onie/onie/tree/1.6.2">1.6.2</a>
+      Tag: <a href="https://github.com/onie/onie/tree/1.6.4">1.6.4</a>
 
   </body>
 </html>
