--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
     <p>
       Current Release
-      Tag: <a href="https://github.com/onie/onie/tree/1.6.4">1.6.4</a>
+      Tag: <a href="https://github.com/onie/onie/releases/tag/2013.11.00">2013.11.00</a>
 
   </body>
 </html>
