update generated documentation

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <h2>Documentation</h2>
 
     <ul>
-      <li><a href="docs/overview/index.html">Project Overview</a></li>
+      <li><a href="docs/index.html">Documentation Home Page</a></li>
       <li><a href="docs/user-guide/index.html">Quick Start User's Guide</a></li>
     </ul>
 
@@ -38,8 +38,8 @@
     <ul>
       <li><a href="docs/design-spec/index.html">Design Overview</a></li>
       <li><a href="docs/developers/index.html">For Developers</a></li>
-      <li><a href="docs/developers/index.html#onie-porting-guide">Porting Guide</a></li>
-      <li><a href="docs/developers/index.html#onie-testing-guide">Testing Guide</a></li>
+      <li><a href="docs/developers/porting.html">Porting Guide</a></li>
+      <li><a href="docs/developers/testing.html">Testing Guide</a></li>
     </ul>
 
     <h2>Mailing List</h2>
@@ -68,7 +68,7 @@
 
     <p>
       Current Release
-      Tag: <a href="https://github.com/onie/onie/releases/tag/2014.02">2014.02</a>
+      Tag: <a href="https://github.com/onie/onie/releases/tag/2014.05-rc1">2014.05-rc1</a>
 
   </body>
 </html>
