update generated documentation

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
     <p>
       Current Release
-      Tag: <a href="https://github.com/onie/onie/releases/tag/2014.05-rc1">2014.05</a>
+      Tag: <a href="https://github.com/onie/onie/releases/tag/2014.05">2014.05</a>
 
   </body>
 </html>
