update generated documentation

--- a/index.html
+++ b/index.html
@@ -1,19 +1,6 @@
 <html>
   <head>
     <title>Open Network Install Environment</title>
-    <script type="text/javascript">
-
-      var _gaq = _gaq || [];
-      _gaq.push(['_setAccount', 'UA-45248701-1']);
-      _gaq.push(['_trackPageview']);
-
-      (function() {
-      var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-      ga.src = ('https:' == document.location.protocol ? 'https://' : 'http://') + 'stats.g.doubleclick.net/dc.js';
-      var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-      })();
-
-    </script>
   </head>
   <body>
 
@@ -24,6 +11,11 @@
       ONIE is a small operating system, pre-installed as firmware on bare
       metal network switchs, that provides an environment for automated
       provisioning.
+
+    <h2>OCP Wiki</h2>
+
+    <p>
+      Visit the <a href="http://www.opencompute.org/wiki/Networking/ONIE">OCP ONIE Wiki</a> for the most up to date information.
 
     <h2>Documentation</h2>
 
@@ -50,25 +42,24 @@
 
     <p>
       Send questions, bugs, comments and ideas
-      to <a href="mailto:onie@onie.org">onie@onie.org</a>.
+      to <a href="mailto:opencompute-onie@lists.opencompute.org">opencompute-onie@lists.opencompute.org</a>.
 
     <p>
-      Subscribe to the list by sending an email
-      to <a href="mailto:onie%2Bsubscribe@onie.org">onie+subscribe@onie.org</a>.
+      Join the mailing list: <a href="http://lists.opencompute.org/mailman/listinfo/opencompute-onie">http://lists.opencompute.org/mailman/listinfo/opencompute-onie</a>.
 
     <p>
       Browse the
-      archives <a href="https://groups.google.com/a/onie.org/group/onie">here</a>.
+      archives <a href="http://lists.opencompute.org/pipermail/opencompute-onie">http://lists.opencompute.org/pipermail/opencompute-onie</a>.
 
     <h2>Download the Code</h2>
     
     <p>
       The ONIE git repository is hosted
-      on GitHub: <a href="https://github.com/onie/onie">https://github.com/onie/onie</a>.
+      on GitHub: <a href="https://github.com/opencomputeproject/onie">https://github.com/opencomputeproject/onie</a>.
 
     <p>
       Current Release
-      Tag: <a href="https://github.com/onie/onie/releases/tag/2014.05">2014.05</a>
+      Tag: <a href="https://github.com/opencomputeproject/onie/releases/tag/2014.05">2014.05</a>
 
   </body>
 </html>
