redirect html pages to the wiki

--- a/index.html
+++ b/index.html
@@ -1,61 +1,8 @@
 <html>
   <head>
-    <title>Open Network Install Environment</title>
+    <meta http-equiv="Refresh" content="0; url=https://github.com/opencomputeproject/onie/wiki/Home" />
   </head>
   <body>
-
-    <img src="docs/_static/ONIE-logo-green-160x60.png" alt="ONIE">
-    <h2>Open Network Install Environment</h2>
-
-    <p>
-      ONIE is a small operating system, pre-installed as firmware on bare
-      metal network switchs, that provides an environment for automated
-      provisioning.
-
-    <h2>OCP Wiki</h2>
-
-    <p>
-      Visit the <a href="http://www.opencompute.org/wiki/Networking/ONIE">OCP ONIE Wiki</a> for the most up to date information.
-
-    <h2>Documentation</h2>
-
-    <ul>
-      <li><a href="docs/index.html">Documentation Home Page</a></li>
-      <li><a href="docs/user-guide/index.html">Quick Start User's Guide</a></li>
-    </ul>
-
-    <p>
-    When you are ready to dive deeper read these pages:
-
-    <ul>
-      <li><a href="docs/design-spec/index.html">Design Overview</a></li>
-      <li><a href="docs/developers/index.html">For Developers</a></li>
-      <li><a href="docs/developers/porting.html">Porting Guide</a></li>
-      <li><a href="docs/developers/testing.html">Testing Guide</a></li>
-    </ul>
-
-    <h2>Mailing List</h2>
-
-    <p>
-      This is a low volume list for questions, comments and general
-      announcements.
-
-    <p>
-      Send questions, bugs, comments and ideas
-      to <a href="mailto:opencompute-onie@lists.opencompute.org">opencompute-onie@lists.opencompute.org</a>.
-
-    <p>
-      Join the mailing list: <a href="http://lists.opencompute.org/mailman/listinfo/opencompute-onie">http://lists.opencompute.org/mailman/listinfo/opencompute-onie</a>.
-
-    <p>
-      Browse the
-      archives <a href="http://lists.opencompute.org/pipermail/opencompute-onie">http://lists.opencompute.org/pipermail/opencompute-onie</a>.
-
-    <h2>Download the Code</h2>
-    
-    <p>
-      The ONIE git repository is hosted
-      on GitHub: <a href="https://github.com/opencomputeproject/onie">https://github.com/opencomputeproject/onie</a>.
-
+    <p>This page has moved.  Please follow <a href="https://github.com/opencomputeproject/onie/wiki/Home">https://github.com/opencomputeproject/onie/wiki/Home</a>.</p>
   </body>
 </html>
