updating gh-pages documentation

--- a/community/index.html
+++ b/community/index.html
@@ -132,7 +132,7 @@
           
           <div role="navigation" aria-label="breadcrumbs navigation">
             <ol class="breadcrumb">
-              <li><a href="../index.html">Docs</a></li>
+              <li><a href="../index.html">Home</a></li>
               
               <li>Community</li>
             </ol>
