--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
           
           <div role="navigation" aria-label="breadcrumbs navigation">
             <ol class="breadcrumb">
-              <li><a href="#">Docs</a></li>
+              <li><a href="#">Home</a></li>
               
               <li>Open Network Install Environment</li>
             </ol>
