--- a/cli/index.html
+++ b/cli/index.html
@@ -201,7 +201,7 @@
           
           <div role="navigation" aria-label="breadcrumbs navigation">
             <ol class="breadcrumb">
-              <li><a href="../index.html">Docs</a></li>
+              <li><a href="../index.html">Home</a></li>
               
               <li>Command Line Reference</li>
             </ol>
