--- a/design-spec/index.html
+++ b/design-spec/index.html
@@ -118,7 +118,7 @@
           
           <div role="navigation" aria-label="breadcrumbs navigation">
             <ol class="breadcrumb">
-              <li><a href="../index.html">Docs</a></li>
+              <li><a href="../index.html">Home</a></li>
               
               <li>Design Specification</li>
             </ol>
