--- a/testing-certification/index.html
+++ b/testing-certification/index.html
@@ -117,7 +117,7 @@
           
           <div role="navigation" aria-label="breadcrumbs navigation">
             <ol class="breadcrumb">
-              <li><a href="../index.html">Docs</a></li>
+              <li><a href="../index.html">Home</a></li>
               
               <li>Testing and Certification</li>
             </ol>
