--- a/developers/index.html
+++ b/developers/index.html
@@ -32,6 +32,7 @@
     <script type="text/javascript" src="../_static/jquery.js"></script>
     <script type="text/javascript" src="../_static/underscore.js"></script>
     <script type="text/javascript" src="../_static/doctools.js"></script>
+    <link rel="shortcut icon" href="../_static/onie-favicon-16x16.ico"/>
     <link rel="top" title="Open Network Install Environment  documentation" href="../index.html" />
     <link rel="next" title="Build Instructions" href="building.html" />
     <link rel="prev" title="Certification Process" href="../testing-certification/certification.html" />
@@ -67,6 +68,9 @@
   
   <img src="../_static/ONIE-logo-green-160x60.png" class="logo" />
   </a>
+  <center><a href="https://github.com/opencomputeproject/onie" class="logo">
+  <svg class="octicon-mark-github" viewBox="0 0 16 16" version="1.1" width="16" height="16" aria-hidden="true"><path fill-rule="evenodd" d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0 0 16 8c0-4.42-3.58-8-8-8z"/></svg>
+  opencomputeproject/onie</a></center>
 
 <div class="sidebar-block">
   <div class="sidebar-wrapper">
