updating gh-pages documentation

--- a/cli/index.html
+++ b/cli/index.html
@@ -451,37 +451,40 @@ address, etc.</p>
 <tr class="row-even"><td>-e</td>
 <td>Management Ethernet MAC address</td>
 </tr>
-<tr class="row-odd"><td>-v</td>
+<tr class="row-odd"><td>-l</td>
+<td>Boot loader type</td>
+</tr>
+<tr class="row-even"><td>-v</td>
 <td>ONIE version string</td>
 </tr>
-<tr class="row-even"><td>-i</td>
+<tr class="row-odd"><td>-i</td>
 <td>ONIE vendor ID.  Print the ONIE vendor’s IANA enterprise number.</td>
 </tr>
-<tr class="row-odd"><td>-b</td>
+<tr class="row-even"><td>-b</td>
 <td>ONIE build machine string</td>
 </tr>
-<tr class="row-even"><td>-m</td>
+<tr class="row-odd"><td>-m</td>
 <td>ONIE machine string</td>
 </tr>
-<tr class="row-odd"><td>-r</td>
+<tr class="row-even"><td>-r</td>
 <td>ONIE machine revision string</td>
 </tr>
-<tr class="row-even"><td>-p</td>
+<tr class="row-odd"><td>-p</td>
 <td>ONIE platform string.  This is the default.</td>
 </tr>
-<tr class="row-odd"><td>-c</td>
+<tr class="row-even"><td>-c</td>
 <td>ONIE CPU architecture</td>
 </tr>
-<tr class="row-even"><td>-f</td>
+<tr class="row-odd"><td>-f</td>
 <td>ONIE configuration version</td>
 </tr>
-<tr class="row-odd"><td>-d</td>
+<tr class="row-even"><td>-d</td>
 <td>ONIE build date</td>
 </tr>
-<tr class="row-even"><td>-t</td>
+<tr class="row-odd"><td>-t</td>
 <td>ONIE partition type</td>
 </tr>
-<tr class="row-odd"><td>-S</td>
+<tr class="row-even"><td>-S</td>
 <td>ONIE switch silicon vendor</td>
 </tr>
 </tbody>
