--- a/overview/index.html
+++ b/overview/index.html
@@ -4,6 +4,7 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
+    <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   
   <!-- Licensed under the Apache 2.0 License -->
@@ -17,16 +18,7 @@
     <title>Overview &#8212; Open Network Install Environment  documentation</title>
     <link rel="stylesheet" href="../_static/guzzle.css" type="text/css" />
     <link rel="stylesheet" href="../_static/pygments.css" type="text/css" />
-    <script type="text/javascript">
-      var DOCUMENTATION_OPTIONS = {
-        URL_ROOT:    '../',
-        VERSION:     '',
-        COLLAPSE_INDEX: false,
-        FILE_SUFFIX: '.html',
-        HAS_SOURCE:  true,
-        SOURCELINK_SUFFIX: '.txt'
-      };
-    </script>
+    <script type="text/javascript" id="documentation_options" data-url_root="../" src="../_static/documentation_options.js"></script>
     <script type="text/javascript" src="../_static/jquery.js"></script>
     <script type="text/javascript" src="../_static/underscore.js"></script>
     <script type="text/javascript" src="../_static/doctools.js"></script>
@@ -38,8 +30,7 @@
   
    
 
-  </head>
-  <body>
+  </head><body>
     <div class="related" role="navigation" aria-label="related navigation">
       <h3>Navigation</h3>
       <ul>
@@ -287,7 +278,7 @@ NOS installer has a lot of flexibility.</p>
 <ul class="simple">
 <li>Fetch additional binaries and configuration files via HTTP</li>
 <li>Chat with inventory control systems via HTTP</li>
-<li>Download a new kernel+initramfs and <code class="docutils literal"><span class="pre">kexec(8)</span></code> into it</li>
+<li>Download a new kernel+initramfs and <code class="docutils literal notranslate"><span class="pre">kexec(8)</span></code> into it</li>
 </ul>
 </div>
 <div class="section" id="network-operating-system-interface">
