updating gh-pages documentation

--- a/cli/index.html
+++ b/cli/index.html
@@ -27,7 +27,7 @@
     <link rel="index" title="Index" href="../genindex.html" />
     <link rel="search" title="Search" href="../search.html" />
     <link rel="next" title="FAQ" href="../faq/index.html" />
-    <link rel="prev" title="Source Code Release Cycle" href="../developers/release.html" />
+    <link rel="prev" title="Project Lead Tasks" href="../developers/project_lead_tasks.html" />
   
    
 
@@ -42,7 +42,7 @@
           <a href="../faq/index.html" title="FAQ"
              accesskey="N">next</a> |</li>
         <li class="right" >
-          <a href="../developers/release.html" title="Source Code Release Cycle"
+          <a href="../developers/project_lead_tasks.html" title="Project Lead Tasks"
              accesskey="P">previous</a> |</li>
         <li class="nav-item nav-item-0"><a href="../index.html">Open Network Install Environment  documentation</a> &#187;</li> 
       </ul>
@@ -776,7 +776,7 @@ update log to stdout.</p>
   <div class="footer-relations">
     
       <div class="pull-left">
-        <a class="btn btn-default" href="../developers/release.html" title="previous chapter (use the left arrow)">Source Code Release Cycle</a>
+        <a class="btn btn-default" href="../developers/project_lead_tasks.html" title="previous chapter (use the left arrow)">Project Lead Tasks</a>
       </div>
     
       <div class="pull-right">
@@ -798,7 +798,7 @@ update log to stdout.</p>
           <a href="../faq/index.html" title="FAQ"
              >next</a> |</li>
         <li class="right" >
-          <a href="../developers/release.html" title="Source Code Release Cycle"
+          <a href="../developers/project_lead_tasks.html" title="Project Lead Tasks"
              >previous</a> |</li>
         <li class="nav-item nav-item-0"><a href="../index.html">Open Network Install Environment  documentation</a> &#187;</li> 
       </ul>
